removed spaces in filenames

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -50,8 +50,8 @@
                 others to join you is clearly leadership, and we think of such people as charasmatic. But there are
                 other types of leaders, and here's the key: leadership can be distributed. Some provide vital expertise
                 and services. Some act in an advisory capacity, stepping back giving perspective. Even just showing up
-                faithfully is leadership, because without a cadre of reliable, supportive volunteers every organization
-                would fail.</p>
+                faithfully is leadership, because without a cadre of reliable, supportive volunteers every non-profit
+                organization would fail.</p>
         </div>
 
         <section class="intasc grid2">
@@ -70,14 +70,14 @@
                 <p>On the big day we took our classes to Microsoft for the judging competition with several other
                     schools competing. Three of our eight teams brought home trophies, one of which is also presented as
                     an artifact. Other artifacts presented are a screenshot of a GitHub repository and a collaboration
-                    invite</p>
+                    invite.</p>
             </div>
 
             <img src="../img/wumpus.jpg" alt="winning students holding the Hunt the Wumpus trophy">
 
             <div class="grid1">
-                <img src="../img/Wumpus Github.png" alt="screenshot of a Wumpus respository in GitHub">
-                <img src="../img/Wumpus Github Invite.png"
+                <img src="../img/Wumpus_Github.png" alt="screenshot of a Wumpus respository in GitHub">
+                <img src="../img/Wumpus_Github_Invite.png"
                     alt="email screenshot of an invite to collaborate on a Wumpus respository in GitHub">
             </div>
 
@@ -112,7 +112,7 @@
             </div>
         </section>
         <div class="intasc grid1">
-            <embed src="pdf/History of Computer Science.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/History_of_Computer_Science.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
         </div>
         <section class="intasc grid2">
@@ -154,7 +154,7 @@
                         volunteers at Romanian orphanages.</p>
                 </div>
             </div>
-            <img src="../img/Watch Dogs shirt.jpg" alt="Watch DOGS t-shirt">
+            <img src="../img/Watch_Dogs_shirt.jpg" alt="Watch DOGS t-shirt">
         </section>
     </section>
 </body>
