--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -49,8 +49,8 @@
         </div>
 
         <section class="intasc grid2">
-            <img src="../img/Choice Activity.png" alt="screenshot from Schoology of Choice Activity">
-            <img src="../img/Choice Project.png" alt="screenshot from Schoology of Choice Projects">
+            <img src="../img/Choice_Activity.png" alt="screenshot from Schoology of Choice Activity">
+            <img src="../img/Choice_Project.png" alt="screenshot from Schoology of Choice Projects">
 
             <div>
                 <div class="box intasc">
@@ -126,7 +126,7 @@
                     </ul>
                 </div>
                 <img src="../img/FAFSA.png" alt="screenshot submitted by a student to show FAFSA was completed">
-                <embed src="pdf/trade school.pdf" type="application/pdf" width="100%" height="1200px"
+                <embed src="pdf/trade_school.pdf" type="application/pdf" width="100%" height="1200px"
                     title="Embedded PDF Document">
             </div>
 
@@ -224,17 +224,17 @@
                         <li>What is the expected salary of graduates?</li>
                     </ul>
                     <p>You may pick&nbsp;any&nbsp;school, but here is a list of local schools that I came up with:</p>
-                    <table width="525">
+                    <table>
                         <tbody>
                             <tr>
-                                <td width="268">
+                                <td>
                                     <p>Bates Technical College</p>
                                 </td>
-                                <td width="188">
+                                <td>
                                     <p><a href="https://www.batestech.edu/" rel="noopener"
                                             target="_blank">https://www.batestech.edu/</a></p>
                                 </td>
-                                <td width="69">
+                                <td>
                                     <p>Tacoma</p>
                                 </td>
                             </tr>
