--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -76,22 +76,23 @@
         </div>
 
         <section class="intasc grid2">
-            <embed src="pdf/Human Bingo.pdf" type="application/pdf" width="800px" height="1000px"
+            <embed src="pdf/Human_Bingo.pdf" type="application/pdf" width="800px" height="1000px"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/History of Computer Science Group Discussion Questions.pdf" type="application/pdf"
+            <embed src="pdf/History_of_Computer_Science_Group_Discussion_Questions.pdf" type="application/pdf"
                 width="800px" height="1000px" title="Embedded PDF Document">
 
-            <iframe src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
-                width="800px" height="1000px" allowfullscreen></iframe>
+            <iframe title="FAFSA: ANALYZE: A FAFSA Submission Summary"
+                src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
+                width="800" height="1000" allowfullscreen></iframe>
 
-            <iframe
-                src="https://docs.google.com/document/d/17nf6BGv8pPKPw0aUzA05JRCGGNGE-QC_kOnnBuEtb8I/edit?tab=t.0#heading=h.ahrdbzpn0yaq"
-                width="800px" height="1000px" allowfullscreen></iframe>
+            <iframe title="ANALIZAR: Un resumen de tramitación del formulario FAFSA"
+                src=https://docs.google.com/document/d/17nf6BGv8pPKPw0aUzA05JRCGGNGE-QC_kOnnBuEtb8I/edit?tab=t.0#heading=h.ahrdbzpn0yaq"
+                width="800" height="1000" allowfullscreen></iframe>
         </section>
 
         <section class="intasc grid1">
-            <iframe
+            <iframe title="Wumpus Team Assignments"
                 src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
                 width="1200" height="800" allowfullscreen></iframe>
         </section>
