--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -99,9 +99,9 @@
                 </ul>
             </div>
 
-            <img src="../img/Fist of Five.png" alt="Fist of Five: picture of six hands holding up 0 to 5 fingers">
-            <img src="../img/Mud Check 1.png" alt="Mud Check: picture of muddy child">
-            <img src="../img/Mud Check 2.png" alt="Mud Check: picture of muddy dog">
+            <img src="../img/Fist_of_Five.png" alt="Fist of Five: picture of six hands holding up 0 to 5 fingers">
+            <img src="../img/Mud_Check_1.png" alt="Mud Check: picture of muddy child">
+            <img src="../img/Mud_Check_2.png" alt="Mud Check: picture of muddy dog">
 
             <embed src="pdf/Do-Now.pdf" type="application/pdf" width="800px"
                 height="600px" title="Embedded PDF Document">
@@ -222,13 +222,13 @@
                 </ul>
             </div>
 
-            <embed src="pdf/History of Computer Science Exit Ticket.pdf" type="application/pdf" width="800px"
-                height="800px" title="Embedded PDF Document">
+            <embed src="pdf/History_of_Computer_Science_Exit_Ticket.pdf" type="application/pdf" width="800"
+                height="800" title="Embedded PDF Document">
 
-            <embed src="pdf/Mock Final.pdf" type="application/pdf" width="800px" height="800px"
+            <embed src="pdf/Mock_Final.pdf" type="application/pdf" width="800" height="800"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Item Banks.pdf" type="application/pdf" width="800px" height="800px"
+            <embed src="pdf/Item_Banks.pdf" type="application/pdf" width="800" height="800"
                 title="Embedded PDF Document">
         </section>
     </section>
