--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -80,10 +80,10 @@
                 <h2>Computer Science Lesson Plans</h2>
             </div>
             <section class="intasc grid2">
-                <embed src="pdf/History of Computer Science Lesson Plan.pdf" type="application/pdf" width="900px"
-                    height="1000px" title="Embedded PDF Document">
+                <embed src="pdf/History_of_Computer_Science_Lesson_Plan.pdf" type="application/pdf" width="900"
+                    height="1000" title="Embedded PDF Document">
 
-                <embed src="pdf/Loops Lesson Plan.pdf" type="application/pdf" width="900px" height="1000px"
+                <embed src="pdf/Loops_Lesson_Plan.pdf" type="application/pdf" width="900" height="1000"
                     title="Embedded PDF Document">
             </section>
 
@@ -109,11 +109,11 @@
             </div>
 
             <section class="intasc grid2b">
-                <embed src="pdf/Finance Curriculum.pdf" type="application/pdf" width="650px" height="1000px"
+                <embed src="pdf/Finance_Curriculum.pdf" type="application/pdf" width="650" height="1000"
                     title="Embedded PDF Document">
 
-                <embed src="pdf/Finance Car Buying Lesson Plan.pdf" type="application/pdf" width="1000px"
-                    height="1000px" title="Embedded PDF Document">
+                <embed src="pdf/Finance_Car_Buying_Lesson_Plan.pdf" type="application/pdf" width="1000"
+                    height="1000" title="Embedded PDF Document">
             </section>
         </section>
         <br>
