--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -83,20 +83,20 @@
         </section>
 
         <section class="intasc grid2">
-            <embed src="pdf/Intro to Algorithms.pdf" type="application/pdf" width="1000px" height="1000px"
+            <embed src="pdf/Intro_to_Algorithms.pdf" type="application/pdf" width="1000" height="1000"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Palindrome Detection Project.pdf" type="application/pdf" width="800px" height="1000px"
+            <embed src="pdf/Palindrome_Detection_Project.pdf" type="application/pdf" width="800" height="1000"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Binary Numbers Lessson Plan.pdf" type="application/pdf" width="950px" height="1000px"
+            <embed src="pdf/Binary_Numbers_Lessson_Plan.pdf" type="application/pdf" width="950" height="1000"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Sorting Assignment.pdf" type="application/pdf" width="800px" height="1000px"
+            <embed src="pdf/Sorting_Assignment.pdf" type="application/pdf" width="800" height="1000"
                 title="Embedded PDF Document">
 
             <img src="../img/cards.jpg" alt="large cards with numbers written on them">
-            <img src="../img/Students Sorting.webp" alt="students holding cards standing in a line">
+            <img src="../img/Students_Sorting.webp" alt="students holding cards standing in a line">
         </section>
     </section>
 </body>
