--- a/intasc/intasc9.html
+++ b/intasc/intasc9.html
@@ -66,10 +66,10 @@
             </ul>
         </div>
         <section class="intasc grid2">
-            <embed src="pdf/WorkingConnectionscert20250426-27-fwpe6u.pdf" type="application/pdf" width="800px"
-                height="600px" title="Embedded PDF Document">
-            <embed src="pdf/Malkasian PGP program completion_2024.pdf" type="application/pdf" width="800px"
-                height="1000px" title="Embedded PDF Document">
+            <embed src="pdf/WorkingConnectionscert20250426-27-fwpe6u.pdf" type="application/pdf" width="800"
+                height="600" title="Embedded PDF Document">
+            <embed src="pdf/Malkasian_PGP_program_completion_2024.pdf" type="application/pdf" width="800"
+                height="1000" title="Embedded PDF Document">
         </section>
     </section>
 </body>
