--- a/pages/resume.html
+++ b/pages/resume.html
@@ -38,8 +38,8 @@
         </nav>
 
         <h1>Resume</h1>
-        <section class="grid1">
-            <embed src="Gary S Malkasian.pdf" type="application/pdf" width="900px" height="1200px"
+        <div class="grid1">
+            <embed src="Gary_Malkasian.pdf" type="application/pdf" width="900" height="1200"
                 title="Embedded PDF Document">
         </section>
 
