--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <h1 class="home">Gary S. Malkasian Education Portfolio</h1>
 
-        <main>
+        <div class="main">
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
                     class="left" src="img/CWU_Medallion-RGB-transparent.png" alt="Seal of Central Washington University"></a>
 
@@ -50,7 +50,7 @@
             </div>
 
             <img class="right" src="img/Gary.jpg" alt="photo of Gary Malkasian">
-        </main>
+        </div>
     </section>
 </body>
 
