--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -82,11 +82,11 @@
         </div>
 
         <section class="intasc grid1">
-            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
-            <embed src="pdf/Trees.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/Trees.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
-            <embed src="pdf/Paying for College Part I.pdf" type="application/pdf" width="1500px" height="800px"
+            <embed src="pdf/Paying_for_College_Part_I.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
         </section>
     </section>
