--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -102,7 +102,7 @@
         </section>
         <br>
         <section class="intasc grid1">
-            <embed src="pdf/RESEARCH - Find Your Next Car.pdf" type="application/pdf" width="1200px" height="900px"
+            <embed src="pdf/RESEARCH-Find_Your_Next_Car.pdf" type="application/pdf" width="1200" height="900"
                 title="Embedded PDF Document">
         </section>
     </section>
