--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -312,7 +312,7 @@
             <hr>
             <iframe title="The School I Chose - Analise"
                 src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/embed?start=true&loop=true&delayms=3000"
-                frameborder="0" width="1600" height="900" allowfullscreen mozallowfullscreen webkitallowfullscreen>
+                width="1600" height="900" allowfullscreen>
             </iframe>
         </div>
         <div class="box">
@@ -320,8 +320,8 @@
             <hr>
             <iframe title="The School I Chose - Sarah"
                 src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/embed?start=true&loop=true&delayms=3000"
-                frameborder="0" width="1600" height="900" allowfullscreen="true" mozallowfullscreen="true"
-                webkitallowfullscreen="true">
+                width="1600" height="900" allowfullscreen="true"
+                >
             </iframe>
         </div>
         <div class="box">
@@ -329,8 +329,8 @@
             <hr>
             <iframe title="Best Colleges Visit - Joshua"
                 src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/embed?start=true&loop=true&delayms=3000"
-                frameborder="0" width="1600" height="900" allowfullscreen="true" mozallowfullscreen="true"
-                webkitallowfullscreen="true">
+                width="1600" height="900" allowfullscreen="true"
+                >
             </iframe>
         </div>
     </section>
