--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -77,7 +77,7 @@
 
         <section class="intasc grid1">
             <iframe width="1120" height="730" src="https://www.youtube.com/embed/g06hNBhoS1k?si=zVrcWAtdn7obY6W2"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
