modified to pass validation

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -54,7 +54,7 @@
                 organization would fail.</p>
         </div>
 
-        <section class="intasc grid2">
+        <div class="intasc grid2">
 
             <div class="box intasc">
                 <h2>Hunt the Wumpus</h2>
@@ -110,12 +110,12 @@
                     students, the feedback I gave him, and his final draft: <a
                         href="intasc6.html#scholarship">Scholarship Essay</a></p>
             </div>
-        </section>
+        </div>
         <div class="intasc grid1">
             <embed src="pdf/History_of_Computer_Science.pdf" type="application/pdf" width="1320" height="800"
                 title="Embedded PDF Document">
         </div>
-        <section class="intasc grid2">
+        <div class="intasc grid2">
             <div class="box intasc">
                 <h2>Toastmasters Club</h2>
                 <p>I've been a Toastmaster for five years. I've been an officer in multiple roles, including club
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <img src="../img/Watch_Dogs_shirt.jpg" alt="Watch DOGS t-shirt">
-        </section>
+        </div>
     </section>
 </body>
 
