--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -126,7 +126,7 @@
                     </ul>
                 </div>
                 <img src="../img/FAFSA.png" alt="screenshot submitted by a student to show FAFSA was completed">
-                <embed src="pdf/trade_school.pdf" type="application/pdf" width="100%" height="1200px"
+                <embed src="pdf/trade_school.pdf" type="application/pdf" width="800" height="1200"
                     title="Embedded PDF Document">
             </div>
 
@@ -320,8 +320,7 @@
             <hr>
             <iframe title="The School I Chose - Sarah"
                 src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/embed?start=true&loop=true&delayms=3000"
-                width="1600" height="900" allowfullscreen="true"
-                >
+                width="1600" height="900" allowfullscreen>
             </iframe>
         </div>
         <div class="box">
@@ -329,8 +328,7 @@
             <hr>
             <iframe title="Best Colleges Visit - Joshua"
                 src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/embed?start=true&loop=true&delayms=3000"
-                width="1600" height="900" allowfullscreen="true"
-                >
+                width="1600" height="900" allowfullscreen>
             </iframe>
         </div>
     </section>
