--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -81,14 +81,14 @@
             </ol>
         </div>
 
-        <section class="intasc grid1">
+        <div class="intasc grid1">
             <embed src="pdf/Loops.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
             <embed src="pdf/Trees.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
             <embed src="pdf/Paying_for_College_Part_I.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
-        </section>
+        </div>
     </section>
 </body>
 
