--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -58,7 +58,7 @@
                 lesson "Research: Find Your Next Car".</p>
         </div>
 
-        <section class="intasc grid2">
+        <div class="intasc grid2">
             <div class="box intasc" id="projects">
                 <h2 class="left">Final Projects Fall '24:</h2>
                 <br><a href="https://garymalk.github.io/CSD112/bipolar-disorder/BIPOLAR%20DISORDER.html"
@@ -99,12 +99,12 @@
                 <br>
                 <br>
             </div>
-        </section>
+        </div>
         <br>
-        <section class="intasc grid1">
+        <div class="intasc grid1">
             <embed src="pdf/RESEARCH-Find_Your_Next_Car.pdf" type="application/pdf" width="1000" height="900"
                 title="Embedded PDF Document">
-        </section>
+        </div>
     </section>
 </body>
 
