--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -45,12 +45,14 @@
                 decision making.</blockquote>
 
             <p>Assessments either provide feedback as the learner is progressing, contribute to determining how well the
-                learner has mastered the material for the purposes of a grade, or both. <a href="#formative">Formative Assessments</a>
-                provide feedback to the learner and/or the teacher.&nbsp;<a href="#summative">Summative Assessments</a> contribute to
+                learner has mastered the material for the purposes of a grade, or both. <a href="#formative">Formative
+                    Assessments</a>
+                provide feedback to the learner and/or the teacher.&nbsp;<a href="#summative">Summative Assessments</a>
+                contribute to
                 the student's grade at the end of the process.</p>
         </div>
 
-        <section class="intasc grid2">
+        <div class="intasc grid2">
             <div class="box intasc" id="formative">
                 <h2>Formative Assessments</h2>
                 <p>As an instructor, I assist students with feedback as they are working as well as solicit feedback
@@ -80,7 +82,8 @@
                         weekly assignments, so getting points knocked off a previous one is usually, again, a formative
                         experience. There are many online valiator tools, but these are my favorites:
                         <br><a href="https://validator.w3.org/" rel="noopener" target="_blank">HTML Validator</a>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://jigsaw.w3.org/css-validator/" rel="noopener" target="_blank">CSS
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://jigsaw.w3.org/css-validator/" rel="noopener"
+                            target="_blank">CSS
                             Validator</a>
                     </li>
                     <li>
@@ -103,57 +106,70 @@
             <img src="../img/Mud_Check_1.png" alt="Mud Check: picture of muddy child">
             <img src="../img/Mud_Check_2.png" alt="Mud Check: picture of muddy dog">
 
-            <embed src="pdf/Do-Now.pdf" type="application/pdf" width="800px"
-                height="600px" title="Embedded PDF Document">
+            <embed src="pdf/Do-Now.pdf" type="application/pdf" width="800" height="600" title="Embedded PDF Document">
 
             <div>
+                <div id="scholarship" class="box intasc">
+                    <h2>Student's Scholarship Essay</h2>
+                    <h3>Student's Rough Draft</h3>
+                    <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
+                        parents yelling, and the aching reminder of responsibility. I’m the oldest of three, and while
+                        most
+                        people my age were worrying about what to post, I was figuring out how to clean the whole house,
+                        babysit, work, and get my homework done all in the same day.</p>
+                    <p>
+                        My mom is a hard worker, she’s worked at the same place for as long as I can remeber, 40 hour
+                        weeks,
+                        sometimes 60. My dad, I don’t even really know. He’s always been in my life but he’s never
+                        really
+                        been there. An empty shell where a man once was. Silent car rides, birthday cards that all say
+                        the
+                        same thing. They always say we’re working on things but nothing has ever changed. For aslong as
+                        I
+                        can remember, my grandfather has been my bestfriend. I used to go to his house every summer and
+                        every week or weekend if my parents allowed. He would always tell me his crazy stories while
+                        we’d
+                        work in the yard and work on all these different projects. I didn’t talk to many people in my
+                        life
+                        about what was going on with me. A lot of people wouldn’t even understand. He understood me
+                        though,
+                        he saw the best in everyone. When he passed away a few months ago, I felt like a piece of me had
+                        died too. In my darkest days he was what got me through, even now I still do my best for him.
+                    </p>
 
-            <div id="scholarship" class="box intasc">
-                <h2>Student's Scholarship Essay</h2>
-                <h3>Student's Rough Draft</h3>
-                <p>Most days, the house is loud. Not with laughter or music, but with the sounds of crying toddlers,
-                    parents yelling, and the aching reminder of responsibility. I’m the oldest of three, and while most
-                    people my age were worrying about what to post, I was figuring out how to clean the whole house,
-                    babysit, work, and get my homework done all in the same day.</p>
-                <p>
-                    My mom is a hard worker, she’s worked at the same place for as long as I can remeber, 40 hour weeks,
-                    sometimes 60. My dad, I don’t even really know. He’s always been in my life but he’s never really
-                    been there. An empty shell where a man once was. Silent car rides, birthday cards that all say the
-                    same thing. They always say we’re working on things but nothing has ever changed. For aslong as I
-                    can remember, my grandfather has been my bestfriend. I used to go to his house every summer and
-                    every week or weekend if my parents allowed. He would always tell me his crazy stories while we’d
-                    work in the yard and work on all these different projects. I didn’t talk to many people in my life
-                    about what was going on with me. A lot of people wouldn’t even understand. He understood me though,
-                    he saw the best in everyone. When he passed away a few months ago, I felt like a piece of me had
-                    died too. In my darkest days he was what got me through, even now I still do my best for him.
-                </p>
-
-            </div>
-            <div class="box intasc">
-                <h3>My Feedback</h3>
-                <p>Great start, with a moving emotional narrative. A few things:</p>
-                <p>You've got the vulnerability piece nailed. Now you have to figure out where you are going with this.
-                    How is this related to your educational goals and what you want to do with your life? What insights
-                    do you have?</p>
-                <p>Some crafting issues:<br />"My mom is a hard worker, she&rsquo;s worked at..."<br />Those are two
-                    independent clauses. They can't be joined by a comma. I would change the first part into its own
-                    sentence:<br />"My mom is a hard worker. She&rsquo;s worked at..."</p>
-                <p>"remeber" - spelling: remember</p>
-                <p>"An empty shell where a man once was." I get your meaning, but that's a judgement. I would leave it
-                    out and stick to the facts such as silent car rides, repetitive birthday cards, and not being there.
-                </p>
-                <p>"For aslong as I can remember, my grandfather has been my bestfriend." I would make this the start of
-                    a new paragraph, because it is a change of subject from your mom and dad. Also:</p>
-                <p>"aslong" that's two words: "as long"</p>
-                <p>"bestfriend" also two words</p>
-                <p>"In my darkest days he was what got me through, even now I still do my best for him."</p>
-                <p>Again, you have two independent clauses joined by a comma. It's much stronger like this:<br />"In my
-                    darkest days he was what got me through. Even now I still do my best for him."</p>
-                <p>Use grammar check &amp; spell check, and ask at least three people to critique it for you. One of
-                    those people should be an English teacher and one should be another student.</p>
-                <p>Great start, though. You communicate your feelings very well. Tie it in with what you have learned
-                    and what you want to do and it will be a strong contender.<br />Thu May 29, 2025 at 12:12 pm</p>
-            </div>
+                </div>
+                <div class="box intasc">
+                    <h3>My Feedback</h3>
+                    <p>Great start, with a moving emotional narrative. A few things:</p>
+                    <p>You've got the vulnerability piece nailed. Now you have to figure out where you are going with
+                        this.
+                        How is this related to your educational goals and what you want to do with your life? What
+                        insights
+                        do you have?</p>
+                    <p>Some crafting issues:<br>"My mom is a hard worker, she&rsquo;s worked at..."<br>Those are two
+                        independent clauses. They can't be joined by a comma. I would change the first part into its own
+                        sentence:<br>"My mom is a hard worker. She&rsquo;s worked at..."</p>
+                    <p>"remeber" - spelling: remember</p>
+                    <p>"An empty shell where a man once was." I get your meaning, but that's a judgement. I would leave
+                        it
+                        out and stick to the facts such as silent car rides, repetitive birthday cards, and not being
+                        there.
+                    </p>
+                    <p>"For aslong as I can remember, my grandfather has been my bestfriend." I would make this the
+                        start of
+                        a new paragraph, because it is a change of subject from your mom and dad. Also:</p>
+                    <p>"aslong" that's two words: "as long"</p>
+                    <p>"bestfriend" also two words</p>
+                    <p>"In my darkest days he was what got me through, even now I still do my best for him."</p>
+                    <p>Again, you have two independent clauses joined by a comma. It's much stronger like this:<br>"In
+                        my
+                        darkest days he was what got me through. Even now I still do my best for him."</p>
+                    <p>Use grammar check &amp; spell check, and ask at least three people to critique it for you. One of
+                        those people should be an English teacher and one should be another student.</p>
+                    <p>Great start, though. You communicate your feelings very well. Tie it in with what you have
+                        learned
+                        and what you want to do and it will be a strong contender.<br>Thu May 29, 2025 at 12:12 pm</p>
+                </div>
             </div>
             <div class="box intasc">
                 <h3>Scholarship Final Draft</h3>
@@ -222,15 +238,15 @@
                 </ul>
             </div>
 
-            <embed src="pdf/History_of_Computer_Science_Exit_Ticket.pdf" type="application/pdf" width="800"
-                height="800" title="Embedded PDF Document">
+            <embed src="pdf/History_of_Computer_Science_Exit_Ticket.pdf" type="application/pdf" width="800" height="800"
+                title="Embedded PDF Document">
 
             <embed src="pdf/Mock_Final.pdf" type="application/pdf" width="800" height="800"
                 title="Embedded PDF Document">
 
             <embed src="pdf/Item_Banks.pdf" type="application/pdf" width="800" height="800"
                 title="Embedded PDF Document">
-        </section>
+        </div>
     </section>
 </body>
 
