--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -75,17 +75,17 @@
             </p>
         </div>
 
-        <section class="grid1">
+        <div class="grid1">
             <div class="box intasc title">
                 <h2>Computer Science Lesson Plans</h2>
             </div>
-            <section class="intasc grid2">
+            <div class="intasc grid2">
                 <embed src="pdf/History_of_Computer_Science_Lesson_Plan.pdf" type="application/pdf" width="900"
                     height="1000" title="Embedded PDF Document">
 
                 <embed src="pdf/Loops_Lesson_Plan.pdf" type="application/pdf" width="900" height="1000"
                     title="Embedded PDF Document">
-            </section>
+            </div>
 
             <div class="box intasc">
                 <h2>Finance Class Artifacts</h2>
@@ -97,25 +97,25 @@
                     <li>Budgeting</li>
                 </ul>
                 <p>The artifact is a listing from Schoology of all the lessons in those units. While most of the
-                    curriculum was from <a href="https://www.ngpf.org/courses/full-year-course/" rel="noopener" target="_blank">NextGen
+                    curriculum was from <a href="https://www.ngpf.org/courses/full-year-course/" rel="noopener"
+                        target="_blank">NextGen
                         Personal Finance</a>, several lessons in the Paying for College unit were my own based on my own
-                    research and experience as a dad. Those lessons were:
+                    research and experience as a dad. Those lessons were:</p>
                 <ul>
                     <li>Deep Dive: Deciding Where to Go to School</li>
                     <li>Choice Projects</li>
                     <li>Deep Dive: Savings Plans and Scholarships</li>
                 </ul>
-                </p>
             </div>
 
-            <section class="intasc grid2b">
+            <div class="intasc grid2b">
                 <embed src="pdf/Finance_Curriculum.pdf" type="application/pdf" width="650" height="1000"
                     title="Embedded PDF Document">
 
-                <embed src="pdf/Finance_Car_Buying_Lesson_Plan.pdf" type="application/pdf" width="1000"
-                    height="1000" title="Embedded PDF Document">
-            </section>
-        </section>
+                <embed src="pdf/Finance_Car_Buying_Lesson_Plan.pdf" type="application/pdf" width="1000" height="1000"
+                    title="Embedded PDF Document">
+            </div>
+        </div>
         <br>
     </section>
 </body>
