--- a/pages/biography.html
+++ b/pages/biography.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="cwusign">
+    <section class="cwusign grid1">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
