--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -75,27 +75,27 @@
             </ul>
         </div>
 
-        <section class="intasc grid2">
-            <embed src="pdf/Human_Bingo.pdf" type="application/pdf" width="800px" height="1000px"
+        <div class="intasc grid2">
+            <embed src="pdf/Human_Bingo.pdf" type="application/pdf" width="800" height="1000"
                 title="Embedded PDF Document">
 
             <embed src="pdf/History_of_Computer_Science_Group_Discussion_Questions.pdf" type="application/pdf"
-                width="800px" height="1000px" title="Embedded PDF Document">
+                width="800" height="1000" title="Embedded PDF Document">
 
             <iframe title="FAFSA: ANALYZE: A FAFSA Submission Summary"
-                src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit?tab=t.0"
+                src="https://docs.google.com/document/d/1vZ_wLhk6d91G0dWjN1TxRIoiOxVg-4N5ETtPT69OrGw/edit"
                 width="800" height="1000" allowfullscreen></iframe>
 
             <iframe title="ANALIZAR: Un resumen de tramitación del formulario FAFSA"
-                src=https://docs.google.com/document/d/17nf6BGv8pPKPw0aUzA05JRCGGNGE-QC_kOnnBuEtb8I/edit?tab=t.0#heading=h.ahrdbzpn0yaq"
+                src="https://docs.google.com/document/d/17nf6BGv8pPKPw0aUzA05JRCGGNGE-QC_kOnnBuEtb8I/edit?usp=sharing"
                 width="800" height="1000" allowfullscreen></iframe>
-        </section>
+        </div>
 
-        <section class="intasc grid1">
+        <div class="intasc grid1">
             <iframe title="Wumpus Team Assignments"
                 src="https://docs.google.com/spreadsheets/d/1YZTxqNx6rswe41J9zWqH-Qm2-k6Q6pDpUU9mFVk7wSk/edit?usp=sharing"
                 width="1200" height="800" allowfullscreen></iframe>
-        </section>
+        </div>
     </section>
 </body>
 
