--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -75,14 +75,14 @@
                 physically understand how the sorting algorithms work.</p>
         </div>
 
-        <section class="intasc grid1">
+        <div class="intasc grid1">
             <iframe width="1120" height="730" src="https://www.youtube.com/embed/g06hNBhoS1k?si=zVrcWAtdn7obY6W2"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </section>
+        </div>
 
-        <section class="intasc grid2">
+        <div class="intasc grid2">
             <embed src="pdf/Intro_to_Algorithms.pdf" type="application/pdf" width="1000" height="1000"
                 title="Embedded PDF Document">
 
@@ -97,7 +97,7 @@
 
             <img src="../img/cards.jpg" alt="large cards with numbers written on them">
             <img src="../img/Students_Sorting.webp" alt="students holding cards standing in a line">
-        </section>
+        </div>
     </section>
 </body>
 
