--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -60,11 +60,11 @@
                     I'm teaching it now, Summer 2025, as I'm creating this portfolio. My students are required to create
                     a website as their final project for the quarter, so it's been fun to show them my final project as
                     I'm creating it. My students have access to the source code: <a
-                        href="https://github.com/GaryMalk/portfolio"
-                        rel="noopener" target="_blank">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
+                        href="https://github.com/GaryMalk/portfolio" rel="noopener"
+                        target="_blank">https://github.com/GaryMalk/portfolio</a>&nbsp;</li>
                 <li>The CS Toolkit I created as an assignment for the CWU MAT tech class: <a
-                        href="https://garymalk.github.io/CSToolkit"
-                        rel="noopener" target="_blank">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
+                        href="https://garymalk.github.io/CSToolkit" rel="noopener"
+                        target="_blank">https://garymalk.github.io/CSToolkit</a>. Again, written by hand, with special
                     care to make the whole site demonstrable of the coding techniques I teach my students in the HTML
                     class. Students have access to the source code: <a href="https://github.com/GaryMalk/CSD112"
                         rel="noopener" target="_blank">https://github.com/GaryMalk/CSD112</a></li>
@@ -82,10 +82,11 @@
         </div>
 
         <div class="intasc grid1">
-            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500" height="800"
-                title="Embedded PDF Document">
-            <embed src="pdf/Trees.pdf" type="application/pdf" width="1500" height="800"
-                title="Embedded PDF Document">
+            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500" height="800" title="Embedded PDF Document">
+
+            <iframe src="https://1drv.ms/p/c/cc1b7ab97fbc565f/IQSmeu-Am8iSR4GYhp0jzuslAXVJjehnbLDe0KKBoYd8pEE"
+                width="1500" height="800" frameborder="0" scrolling="no"></iframe>
+
             <embed src="pdf/Paying_for_College_Part_I.pdf" type="application/pdf" width="1500" height="800"
                 title="Embedded PDF Document">
         </div>
